# soundboard

./: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
scripts/: gen_icons.py
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  config.rs  main.rs  mic.rs  opus_decoder.rs
