[package]
name = "soundboard"
version = "0.1.0"
description = "汎用サウンドボード"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
cpal = "0.15"
rodio = { version = "0.19", default-features = false, features = ["symphonia-all"] }
ogg = "0.9"
opus = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
